# robot-flower-princess-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ml_player/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
ml_player/docs/: TRAINING_GUIDE.md  enhanced_feature_engineer.py
ml_player/scripts/: collect_from_ai_solved_games.py  collect_quality_training_data.py  debug_live_prediction.py  generate_balanced_training_data.py  generate_training_data.py  test_exact_scenario.py  test_feature_extraction.py  test_real_game_state_format.py  train_model.py
ml_player/src/: main.py
ml_player/src/configurator/: dependencies.py  settings.py
ml_player/src/hexagons/mlplayer/domain/core/: __init__.py
ml_player/src/hexagons/mlplayer/domain/ml/: __init__.py  data_collector.py  feature_engineer.py  model_registry.py  model_trainer.py
ml_player/src/hexagons/mlplayer/domain/ports/: __init__.py  game_client.py  ml_player_client.py
ml_player/src/hexagons/mlplayer/domain/use_cases/: predict_action.py
ml_player/src/hexagons/mlplayer/driven/adapters/: __init__.py  http_game_client.py  http_ml_player_client.py
ml_player/src/hexagons/mltraining/domain/ml/: data_collector.py  feature_engineer.py  model_trainer.py
ml_player/src/shared/: logging.py
ml_player/tests/: conftest.py
ml_player/tests/unit/mlplayer/driven/adapters/: test_http_ml_player_client.py
rfp_game/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
rfp_game/src/configurator/: dependencies.py  settings.py
rfp_game/src/hexagons/: __init__.py
rfp_game/src/hexagons/aiplayer/: __init__.py
rfp_game/src/hexagons/aiplayer/domain/ports/: __init__.py  ml_player_client.py
rfp_game/src/hexagons/aiplayer/domain/use_cases/: autoplay.py
rfp_game/src/hexagons/aiplayer/driven/adapters/: __init__.py  http_ml_player_client.py  ml_autoplay_client.py
rfp_game/src/hexagons/game/domain/ports/: game_repository.py  gameplay_data_collector.py  ml_autoplay_data_collector.py  mltraining_data_collector.py
rfp_game/src/hexagons/game/domain/services/: game_service.py
rfp_game/src/hexagons/game/domain/use_cases/: clean_obstacle.py  create_game.py  drop_flower.py  get_game_history.py  get_game_state.py  get_games.py  give_flowers.py  move_robot.py  (+2 more)
rfp_game/src/hexagons/game/driven/: __init__.py
rfp_game/src/hexagons/game/driver/: __init__.py
rfp_game/tests/: conftest.py
rfp_game/tests/feature-component/aiplayer/: test_autoplay_end_to_end.py
rfp_game/tests/feature-component/game/: test_actions_deterministic.py  test_actions_unified.py  test_actions_with_helpers.py
(+259 files in other folders)
